--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Clyz
-SEOTitle: 惜梦的博客 | Clyz
+title: Hey,欢迎来到我的个人博客。
+SEOTitle: Clyz
 header-img: img/post-bg-desk.jpg
 email: niyoudu9@gmail.com
 description: "Every failure is leading towards success."
