--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Every failure is leading towards success."
 keyword: "1, 2, 3, 4, 5, 6, 7, 8"
 url: "http://clyz-mm.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/clyz-mm" # you code repository
+#github_repo: "https://github.com/clyz-mm" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
