--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Clyz
-SEOTitle: Clyz
+SEOTitle: Clyz Blog
 header-img: img/post-bg-desk.jpg
 email: niyoudu9@gmail.com
 description: "Every failure is leading towards success."
@@ -11,7 +11,7 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "一时撸码一时爽，一直撸码一直爽。"
 sidebar-avatar:       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
