--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Clyz
 SEOTitle: Clyz Blog
-header-img: #img/post-bg-desk.jpg
+header-img: img/cz.jpg
 email: niyoudu9@gmail.com
 description: "Every failure is leading towards success."
 keyword: "1, 2, 3, 4, 5, 6, 7, 8"
