--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ sidebar-avatar: http://kks.me/bpdCn    # use absolute URL, seeing it's used in b
 # SNS settings
 RSS: false
 weibo_username:     5260916382
-zhihu_username:     null
+zhihu_username:     
 github_username:    clyz-mm
-facebook_username:  null
-jianshu_username:   null
-#twitter_username:   null
+facebook_username:  
+jianshu_username:   
+#twitter_username:   
 
 
 
@@ -74,11 +74,11 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-#ba_track_id: eae878bbc744bba9242c6312afdb36bc
+ba_track_id:
 
 # Google Analytics
 #ga_track_id: ''            # Format: UA-xxxxxx-xx
-#ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
