--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Clyz
 SEOTitle: Clyz Blog
 header-img: img/post-bg-universe.jpg
-email: niyoudu9@gmail.com
+email: 
 description: "Every failure is leading towards success."
 keyword: "1, 2, 3, 4, 5, 6, 7, 8"
 url: "http://clyz-mm.github.io"          # your host, for absolute URL
